Added day 3 files

--- a/HTML prototype/Code/Index.html
+++ b/HTML prototype/Code/Index.html
@@ -23,7 +23,7 @@
 <header class="Header"> 
         <img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo">
         <h1 class="HeaderOmEk">Om Ek</h1>
-        <img class="Hamburgermenu" src="../Buttons/Hamburgermeny.png">
+        <img class="Hamburgermeny" src="../Buttons/Hamburgermeny.png">
 
 </header>
 
@@ -32,9 +32,9 @@
 <div id="Splash">
 
     <!--Tre-delt overskrift-->
-    <h1 class="Støtteskrift-overskrift-1"> Limited edition </h1>
-    <h1 class="Overskrift"> Panna Cotta </h1>
-    <h1 class="Støtteskrift-overskrift-2"> med saus av norske jordbær </h1>
+    <h1 class="SO1"> Limited edition </h1>
+    <h1 class="O"> Panna Cotta </h1>
+    <h1 class="SO2"> med saus av norske jordbær </h1>
 
 
     <!--Bakgrunn/splash-->
@@ -48,10 +48,10 @@
 </div>
 
 
- <!--Om Panna Cotta-->
+ <!--Om Panna Cotta -->
 <div id="OmPannaCotta">
-
-    <img class="PannaCottaInfo" src="../Photos/PannaCottaSplash.png">
+    
+    <img class="PannaCottaInfo" src="../Photos/PannaCottaSplash2.png">
 
     <!--Tre-delt overskrift-->
     <h2 class="OmPannaCotta-SO1"> Limited edition </h2>
@@ -59,7 +59,7 @@
     <h2 class="OmPannaCotta-SO2"> med saus av norske jordbær </h2>
 
     <!--Tekst-->
-    <p class="OmPannaCotta-Mengdetekst">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
+   <p class="OmPannaCotta-Mengdetekst">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
     råvarer av høyeste kvalitet. Vi erstatter gelatin med eggehvite fra Ek Gårdsegg 
     og bruker ferske meieriprodukter samt vaniljestang fra Tahiti. Desserten leveres
     i en elegant terracotta-skål som kan gjenbrukes.</p>
