Added day 4 files

--- a/HTML prototype/Code/Index.html
+++ b/HTML prototype/Code/Index.html
@@ -64,7 +64,57 @@
     og bruker ferske meieriprodukter samt vaniljestang fra Tahiti. Desserten leveres
     i en elegant terracotta-skål som kan gjenbrukes.</p>
 
+    <!--Buttons-->
+    <button class="button"> Kjøp her </button>
+    <button class="button"> Les mer </button>
+
 </div>
+
+<!--Foto konkurranse-->
+<div id="OmFotoKonkurranse">
+
+    <!--Foto konkurranse karusell-->
+    <div class="carousel-container">
+        <div class="carousel">
+
+            <div class="carousel-item">
+
+                <img src="../Photos/ExamplePhoto1.png" alt="Image 1">
+
+                <p> @Eksempel_foto_1</p>
+
+            </div>
+
+            <div class="carousel-item">
+
+                <img src="../Photos/ExamplePhoto2.png" alt="Image 2">
+
+                <p> @Eksempel_foto_2</p>
+
+            </div>
+
+            <div class="carousel-item">
+
+                <img src="../Photos/ExamplePhoto3.png" alt="Image 3">
+
+                <p> @Eksempel_foto_3</p>
+
+            </div>
+        </div>
+
+        <button class="prev-btn">←</button>
+        <button class="next-btn">→</button>
+
+        <script src="script.js"></script>
+
+    </div>
+
+    <!--Overskrift-->
+    <h3 class="Overskrift"> Fotokonkurranse </h3>
+    <h3 class="Underoverskrift"> Nye vinnere hver uke! </h3>
+
+</div>
+
 
 </body>
 </html>
