Added day 5 files

--- a/HTML prototype/Code/Index.html
+++ b/HTML prototype/Code/Index.html
@@ -23,7 +23,7 @@
 <header class="Header"> 
         <img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo">
         <h1 class="HeaderOmEk">Om Ek</h1>
-        <img class="Hamburgermeny" src="../Buttons/Hamburgermeny.png">
+        <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png">
 
 </header>
 
@@ -38,12 +38,18 @@
 
 
     <!--Bakgrunn/splash-->
-    <img class="Splash" src="../Photos/SplashPhoto.png" alt="Foto av skål med Panna Cotta">
+    <img class="SplashDesktop" src="../Photos/SplashPhoto.png" alt="Foto av skål med Panna Cotta">
+    <img class="SplashMobile" src="../Photos/PannaCottaSplashMobile.png">
 
      <!--Illustrasjoner-->
     <img class="LeafTopLeft" src="../Illustrations/LeafTopLeft.png">
     <img class="LeafTopRight" src="../Illustrations/LeafTopRight.png">
     <img class="FlowerTopLeft" src="../Illustrations/FlowerTopLeft.png">
+    <img class="LeafMidLeft" src="../Illustrations/LeafMidLeft.png">
+    <img class="LeafMidRight1" src="../Illustrations/LeafMidRight1.png">
+    <img class="LeafMidRight2" src="../Illustrations/LeafMidRight2.png">
+    <img class="StrawberryMidRight" src="../Illustrations/StrawberryMidRight.png">
+    <img class="FlowerMidRight" src="../Illustrations/FlowerMidRight.png">
 
 </div>
 
@@ -51,6 +57,7 @@
  <!--Om Panna Cotta -->
 <div id="OmPannaCotta">
     
+    <!--Foto-->
     <img class="PannaCottaInfo" src="../Photos/PannaCottaSplash2.png">
 
     <!--Tre-delt overskrift-->
@@ -59,7 +66,7 @@
     <h2 class="OmPannaCotta-SO2"> med saus av norske jordbær </h2>
 
     <!--Tekst-->
-   <p class="OmPannaCotta-Mengdetekst">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
+   <p class="Mengdetekst">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
     råvarer av høyeste kvalitet. Vi erstatter gelatin med eggehvite fra Ek Gårdsegg 
     og bruker ferske meieriprodukter samt vaniljestang fra Tahiti. Desserten leveres
     i en elegant terracotta-skål som kan gjenbrukes.</p>
@@ -113,7 +120,38 @@
     <h3 class="Overskrift"> Fotokonkurranse </h3>
     <h3 class="Underoverskrift"> Nye vinnere hver uke! </h3>
 
+    <p class="Mengdetekst">Bli med på Ek Gårdskjøkkens foto konkurranse! Snap et foto av din 
+        sommer med Ek sin limited edition Panna Cotta, og delta med sjanse til å vinne deilige 
+        Ek produkter! </p>
+
+     <h3 class="Underoverskrift"> Kampanjeperiode: <br>
+        01.06.2025 - 31.07.2025 </br></h3>  
+
+    <!--Buttons-->
+    <button class="button"> Les mer </button>
+
 </div>
+
+
+<!--Footer-->
+<footer class="footer">
+
+    <img class="LogoFooter" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo">
+
+    <p class="Adresse"> Post adresse:
+        <br> Ek Gårdspakkeri AS </br>
+         Husebyvn. 130
+        <br> 1621 Gressvik </br> </p>
+
+    <p class="Copyright">
+        &copy; 2024 Ek Gårdskjøkken </p>
+
+</footer>
+
+<!--Illustrasjoner Footer-->
+<img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png">
+<img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png">
+<img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png">
 
 
 </body>
