Added day 6 files

--- a/HTML prototype/Code/Index.html
+++ b/HTML prototype/Code/Index.html
@@ -22,7 +22,13 @@
 <!--Header-->
 <header class="Header"> 
         <img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo">
-        <h1 class="HeaderOmEk">Om Ek</h1>
+        <h1 class="Navigasjonsbar">Bestill</h1>
+        <h1 class="Navigasjonsbar">Om Ek Gårdskjøkken</h1>
+        <h1 class="Navigasjonsbar">Fotokonkurranse</h1>
+        <h1 class="Navigasjonsbar">Produkter</h1>
+        <h1 class="Navigasjonsbar">Sommerens nyhet</h1>
+
+
         <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png">
 
 </header>
@@ -66,7 +72,7 @@
     <h2 class="OmPannaCotta-SO2"> med saus av norske jordbær </h2>
 
     <!--Tekst-->
-   <p class="Mengdetekst">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
+   <p class="MengdetekstOmPannaCotta">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
     råvarer av høyeste kvalitet. Vi erstatter gelatin med eggehvite fra Ek Gårdsegg 
     og bruker ferske meieriprodukter samt vaniljestang fra Tahiti. Desserten leveres
     i en elegant terracotta-skål som kan gjenbrukes.</p>
@@ -122,13 +128,13 @@
 
     <p class="Mengdetekst">Bli med på Ek Gårdskjøkkens foto konkurranse! Snap et foto av din 
         sommer med Ek sin limited edition Panna Cotta, og delta med sjanse til å vinne deilige 
-        Ek produkter! </p>
+        Ek&nbsp;produkter! </p>
 
      <h3 class="Underoverskrift"> Kampanjeperiode: <br>
         01.06.2025 - 31.07.2025 </br></h3>  
 
     <!--Buttons-->
-    <button class="button"> Les mer </button>
+    <button class="buttonSingel"> Les mer </button>
 
 </div>
 
@@ -148,7 +154,7 @@
 
 </footer>
 
-<!--Illustrasjoner Footer-->
+<!--Illustrasjoner Footer -->
 <img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png">
 <img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png">
 <img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png">
