Added day 9 files

--- a/Index.html
+++ b/Index.html
@@ -21,15 +21,19 @@
 
 <!--Header-->
 <header class="Header"> 
+
+        <!-- Logo -->
         <a href="Index.html"><img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo"></a>
+
+        <!-- Navigasjonsbar -->
         <a class="Navigasjonsbar" href="Bestill.html"> Bestill </a>
         <a class="Navigasjonsbar" href="OmEk.html"> Om Ek Gårdskjøkken </a>
         <a class="Navigasjonsbar" href="Fotokonkurranse.html"> Fotokonkurranse </a>
         <a class="Navigasjonsbar" href="Produkter.html"> Produkter </a>
         <a class="Navigasjonsbar" href="SommerensNyhet.html"> Sommerens nyhet </a>
 
-
-        <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png">
+        <!-- Hamburgermeny -->
+        <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png" alt="Meny">
 
 </header>
 
@@ -45,7 +49,7 @@
 
     <!--Bakgrunn/splash-->
     <img class="SplashDesktop" src="../Photos/SplashPhoto.png" alt="Foto av skål med Panna Cotta">
-    <img class="SplashMobile" src="../Photos/PannaCottaSplashMobile.png">
+    <img class="SplashMobile" src="../Photos/PannaCottaSplashMobile.png" alt="Foto av skål med Panna Cotta">
 
      <!--Illustrasjoner-->
     <img class="LeafTopLeft" src="../Illustrations/LeafTopLeft.png">
@@ -64,7 +68,7 @@
 <div id="OmPannaCotta">
     
     <!--Foto-->
-    <img class="PannaCottaInfo" src="../Photos/PannaCottaSplash2.png">
+    <img class="PannaCottaInfo" src="../Photos/PannaCottaSplash2.png" alt="Foto av skål med Panna Cotta">
 
     <!--Tre-delt overskrift-->
     <h2 class="OmPannaCotta-SO1"> Limited edition </h2>
@@ -78,8 +82,8 @@
     i en elegant terracotta-skål som kan gjenbrukes.</p>
 
     <!--Buttons-->
-    <button class="button"> Kjøp her </button>
-    <button class="button"> Les mer </button>
+    <a href="Bestill.html"> <button class="button"> Kjøp her </button> </a>
+    <a href="SommerensNyhet.html"> <button class="button"> Les mer </button> </a>
 
 </div>
 
@@ -134,7 +138,7 @@
         01.06.2025 - 31.07.2025 </br></h3>  
 
     <!--Buttons-->
-    <button class="buttonSingel"> Les mer </button>
+    <a href="Fotokonkurranse.html"> <button class="buttonSingel"> Les mer </button> </a>
 
 </div>
 
