Added day 10 files

--- a/Bestill.html
+++ b/Bestill.html
@@ -16,6 +16,13 @@
 </head>
 
 
+<!-- FORKORTELSER:
+    
+    B = Bestill
+    OB = Overskrift Bestill
+    buttonB = Button Bestill
+    
+-->
 
 <body>
 
@@ -37,7 +44,7 @@
 
 </header>
 
-<div class="container">
+<div class="containerB">
 
         <!-- Tekst -->
         <div id="Overskrift">
