--- a/OmEk.html
+++ b/OmEk.html
@@ -16,6 +16,15 @@
 </head>
 
 
+<!-- FORKORTELSER:
+    
+    O = Overskrift
+    SO = Støtteoverskrift
+    Par = Paragraf
+    OE = Om Ek
+
+-->
+
 
 <body>
 
