Added day 12 files

--- a/SommerensNyhet.html
+++ b/SommerensNyhet.html
@@ -27,21 +27,35 @@
 
 <body>
 
+
 <!--Header-->
 <header class="Header"> 
 
-        <!-- Logo -->
-        <a href="Index.html"><img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo"></a>
+    <!-- Logo -->
+    <a href="Index.html"><img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo"></a>
 
-        <!-- Navigasjonsbar -->
-        <a class="Navigasjonsbar" href="Bestill.html"> Bestill </a>
-        <a class="Navigasjonsbar" href="OmEk.html"> Om Ek Gårdskjøkken </a>
-        <a class="Navigasjonsbar" href="Fotokonkurranse.html"> Fotokonkurranse </a>
-        <a class="Navigasjonsbar" href="Produkter.html"> Produkter </a>
-        <a class="Navigasjonsbar" href="SommerensNyhet.html"> Sommerens nyhet </a>
+    <!-- Hamburgermeny -->
+    <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png" alt="Meny">
 
-        <!-- Hamburgermeny -->
-        <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png" alt="Meny">
+<div class="Navigasjon">
+
+<nav class="NavigasjonsbarOverlay">
+
+    <button class="close-btn"> <img class="X" src="../Buttons/X.png"> </button> 
+
+    <!-- Navigasjonsbar -->
+    
+    <a class="Navigasjonsbar" href="SommerensNyhet.html"> Sommerens nyhet </a>
+    <a class="Navigasjonsbar" href="Produkter.html"> Produkter </a>
+    <a class="Navigasjonsbar" href="Fotokonkurranse.html"> Fotokonkurranse </a>
+    <a class="Navigasjonsbar" href="OmEk.html"> Om Ek Gårdskjøkken </a>
+    <a class="Navigasjonsbar" href="Bestill.html"> Bestill </a>
+
+    <script src="hamburgermeny.js"></script>
+
+</nav>
+
+</div>    
 
 </header>
 
