Added day 13 files

--- a/Bestill.html
+++ b/Bestill.html
@@ -27,29 +27,33 @@
 <body>
 
 
-<!--Header-->
+<!--Header -->
 <header class="Header"> 
 
-    <!-- Logo -->
+    <!--Logo-->
     <a href="Index.html"><img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo"></a>
 
-    <!-- Hamburgermeny -->
+    <!--Hamburgermeny (tablet og mobil)-->
     <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png" alt="Meny">
 
+
+<!--Navigasjonsbar-->
 <div class="Navigasjon">
 
+<!--Navigasjonsbar - Overlay-->
 <nav class="NavigasjonsbarOverlay">
 
-    <button class="close-btn"> <img class="X" src="../Buttons/X.png"> </button> 
-
-    <!-- Navigasjonsbar -->
+    <!--Navigasjonsbar - Overlay - Lukk (X)-->
+    <button class="close-btn"> <img class="X" src="../Buttons/X.png" alt="X"> </button> 
     
+    <!--Navigasjonsbar - Knapper-->
     <a class="Navigasjonsbar" href="SommerensNyhet.html"> Sommerens nyhet </a>
     <a class="Navigasjonsbar" href="Produkter.html"> Produkter </a>
     <a class="Navigasjonsbar" href="Fotokonkurranse.html"> Fotokonkurranse </a>
     <a class="Navigasjonsbar" href="OmEk.html"> Om Ek Gårdskjøkken </a>
     <a class="Navigasjonsbar" href="Bestill.html"> Bestill </a>
 
+    <!--Java Script - gjør hamburgermenyen interaktiv-->
     <script src="hamburgermeny.js"></script>
 
 </nav>
@@ -58,22 +62,25 @@
 
 </header>
 
+
+
+<!--Container for sidens hovedinnhold-->
 <div class="containerB">
 
-        <!-- Tekst -->
+        <!--Gruppe for tekst-elementer-->
         <div id="Overskrift">
 
-            <!-- Overskrift -->
+            <!--Overskrift-->
             <h1 class="OB"> Bestill </h1>
 
-            <!-- Mengdetekst -->
-            <p class="MengdetekstB"> Bestill dine favoritt Ek produkter her, enten som privat, eller bedriftskunde! </p>
+            <!--Mengdetekst-->
+            <p class="MengdetekstB"> Bestill dine favoritt Ek produkter her, enten som privat, eller&nbsp;bedriftskunde! </p>
 
 
         </div>
 
 
-        <!-- Knapper -->
+        <!--Gruppe med elementer tiltenkt privatpersoner-->
         <div id="privat">
 
             <!--Overskrift-->
@@ -88,6 +95,7 @@
 
         </div>
 
+        <!--Gruppe med elementer tiltenkt bedrifter-->
         <div id="bedrift">
 
             <!--Overskrift-->
@@ -120,9 +128,9 @@
 </footer>
 
 <!--Illustrasjoner Footer -->
-<img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png">
-<img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png">
-<img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png">
+<img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png" alt="Dekorativt blad">
+<img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png" alt="Dekorativt blad">
+<img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png" alt="Dekorativt jordbær">
 
 </body>
 </html>
