--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML, CSS">
+    <meta name="keywords" content="HTML, CSS, JS">
     <meta name="description" content="Limited edition dessert fra EK">
 
     <title>Ek Gårdskjøkken sommerkampanje</title>
@@ -27,29 +27,33 @@
 <body>
 
 
-<!--Header-->
+<!--Header -->
 <header class="Header"> 
 
-    <!-- Logo -->
+    <!--Logo-->
     <a href="Index.html"><img class="Logo" src="../Logo/Logo.png" alt="Ek Gårdskjøkken logo"></a>
 
-    <!-- Hamburgermeny -->
+    <!--Hamburgermeny (tablet og mobil)-->
     <img class="Hamburgermeny" src="../Buttons/HamburgermenyRed.png" alt="Meny">
 
+
+<!--Navigasjonsbar-->
 <div class="Navigasjon">
 
+<!--Navigasjonsbar - Overlay-->
 <nav class="NavigasjonsbarOverlay">
 
-    <button class="close-btn"> <img class="X" src="../Buttons/X.png"> </button> 
-
-    <!-- Navigasjonsbar -->
+    <!--Navigasjonsbar - Overlay - Lukk (X)-->
+    <button class="close-btn"> <img class="X" src="../Buttons/X.png" alt="X"> </button> 
     
+    <!--Navigasjonsbar - Knapper-->
     <a class="Navigasjonsbar" href="SommerensNyhet.html"> Sommerens nyhet </a>
     <a class="Navigasjonsbar" href="Produkter.html"> Produkter </a>
     <a class="Navigasjonsbar" href="Fotokonkurranse.html"> Fotokonkurranse </a>
     <a class="Navigasjonsbar" href="OmEk.html"> Om Ek Gårdskjøkken </a>
     <a class="Navigasjonsbar" href="Bestill.html"> Bestill </a>
 
+    <!--Java Script - gjør hamburgermenyen interaktiv-->
     <script src="hamburgermeny.js"></script>
 
 </nav>
@@ -57,6 +61,9 @@
 </div>    
 
 </header>
+
+
+
 
  <!--Splash-->
 <div id="Splash">
@@ -72,14 +79,14 @@
     <img class="SplashMobile" src="../Photos/PannaCottaSplashMobile.png" alt="Foto av skål med Panna Cotta">
 
      <!--Illustrasjoner-->
-    <img class="LeafTopLeft" src="../Illustrations/LeafTopLeft.png">
-    <img class="LeafTopRight" src="../Illustrations/LeafTopRight.png">
-    <img class="FlowerTopLeft" src="../Illustrations/FlowerTopLeft.png">
-    <img class="LeafMidLeft" src="../Illustrations/LeafMidLeft.png">
-    <img class="LeafMidRight1" src="../Illustrations/LeafMidRight1.png">
-    <img class="LeafMidRight2" src="../Illustrations/LeafMidRight2.png">
-    <img class="StrawberryMidRight" src="../Illustrations/StrawberryMidRight.png">
-    <img class="FlowerMidRight" src="../Illustrations/FlowerMidRight.png">
+    <img class="LeafTopLeft" src="../Illustrations/LeafTopLeft.png" alt="Dekorativt blad">
+    <img class="LeafTopRight" src="../Illustrations/LeafTopRight.png" alt="Dekorativt blad">
+    <img class="FlowerTopLeft" src="../Illustrations/FlowerTopLeft.png" alt="Dekorativt blomst">
+    <img class="LeafMidLeft" src="../Illustrations/LeafMidLeft.png" alt="Dekorativt blad">
+    <img class="LeafMidRight1" src="../Illustrations/LeafMidRight1.png" alt="Dekorativt blad">
+    <img class="LeafMidRight2" src="../Illustrations/LeafMidRight2.png" alt="Dekorativt blad">
+    <img class="StrawberryMidRight" src="../Illustrations/StrawberryMidRight.png" alt="Dekorativt jordbær">
+    <img class="FlowerMidRight" src="../Illustrations/FlowerMidRight.png" alt="Dekorativt blomst">
 
 </div>
 
@@ -95,7 +102,7 @@
     <h2 class="OmPannaCotta-O"> Panna Cotta </h2>
     <h2 class="OmPannaCotta-SO2"> med saus av norske jordbær </h2>
 
-    <!--Tekst-->
+    <!--Mengdetekst-->
    <p class="MengdetekstOmPannaCotta">Panna Cotta er en eksklusiv fløtedessert hvor Ek Gårdskjøkken bruker 
     råvarer av høyeste kvalitet. Vi erstatter gelatin med eggehvite fra Ek Gårdsegg 
     og bruker ferske meieriprodukter samt vaniljestang fra Tahiti. Desserten leveres
@@ -107,6 +114,7 @@
 
 </div>
 
+
 <!--Foto konkurranse-->
 <div id="OmFotoKonkurranse">
 
@@ -114,34 +122,48 @@
     <div class="carousel-container">
         <div class="carousel">
 
+            <!--Karusell element-->
             <div class="carousel-item">
 
+                <!--Foto-->
                 <img src="../Photos/ExamplePhoto1.png" alt="Image 1">
 
+                <!--Credit-->
                 <p> @Eksempel_foto_1</p>
 
             </div>
 
+
+            <!--Karusell element-->
             <div class="carousel-item">
 
+                <!--Foto-->
                 <img src="../Photos/ExamplePhoto2.png" alt="Image 2">
 
+                <!--Credit-->
                 <p> @Eksempel_foto_2</p>
 
             </div>
 
+
+            <!--Karusell element-->
             <div class="carousel-item">
 
+                <!--Foto-->
                 <img src="../Photos/ExamplePhoto3.png" alt="Image 3">
 
+                <!--Credit-->
                 <p> @Eksempel_foto_3</p>
 
             </div>
+
         </div>
 
+        <!--Karusell knapper-->
         <button class="prev-btn">←</button>
         <button class="next-btn">→</button>
 
+        <!--Java Script - gjør karusellen interaktiv-->
         <script src="script.js"></script>
 
     </div>
@@ -150,15 +172,18 @@
     <h3 class="Overskrift"> Fotokonkurranse </h3>
     <h3 class="Underoverskrift"> Nye vinnere hver uke! </h3>
 
+    <!--Mengdetekst-->
     <p class="Mengdetekst">Bli med på Ek Gårdskjøkkens foto konkurranse! Snap et foto av din 
         sommer med Ek sin limited edition Panna Cotta, og delta med sjanse til å vinne deilige 
         Ek&nbsp;produkter! </p>
-
+    
+    <!--Info-->
      <h3 class="Underoverskrift"> Kampanjeperiode: <br>
         01.06.2025 - 31.07.2025 </br></h3>  
 
     <!--Buttons-->
     <a href="Fotokonkurranse.html"> <button class="buttonSingel"> Les mer </button> </a>
+
 
 </div>
 
@@ -179,9 +204,9 @@
 </footer>
 
 <!--Illustrasjoner Footer -->
-<img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png">
-<img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png">
-<img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png">
+<img class="LeafLeftFooter" src="../Illustrations/LeafLeftFooter.png" alt="Dekorativt blad">
+<img class="LeafRightFooter" src="../Illustrations/LeafRightFooter.png" alt="Dekorativt blad">
+<img class="StrawberryFooter" src="../Illustrations/StrawberryFooter.png" alt="Dekorativt jordbær">
 
 
 </body>
